fix(TrafficInfo): fix z-index

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,7 +32,7 @@ body {
 
 /*#region ItineraryBreakdown */
 .has-stop-indicator {
-	@apply relative before:absolute before:size-[14px] before:left-[-20px] before:top-[1px] before:rounded-full before:bg-white before:border-2 dark:before:border-black;
+	@apply relative before:z-10 before:absolute before:size-[14px] before:left-[-20px] before:top-[1px] before:rounded-full before:bg-white before:border-2 dark:before:border-black;
 
 	&.small-indicator {
 		@apply before:size-[12px] before:left-[-19px] before:top-[2px];
